--- a/.github/workflows/build-livecd.yml
+++ b/.github/workflows/build-livecd.yml
@@ -163,6 +163,9 @@ jobs:
           # Additional utilities
           man-db
           man-pages
+
+          # Plymouth para splash screen
+          plymouth
           PKGEOF
           '
 
@@ -513,6 +516,83 @@ jobs:
           PACMANEOF
           '
 
+      - name: Create loading screen service
+        run: |
+          docker exec arch-builder bash -c '
+          cd /build/archiso-kde
+          mkdir -p airootfs/etc/systemd/system
+          mkdir -p airootfs/usr/local/bin
+
+          # Crear script de loading screen
+          cat > airootfs/usr/local/bin/livecd-loading << "LOADINGEOF"
+          #!/bin/bash
+
+          # Script de pantalla de carga para el LiveCD
+          clear
+          echo -e "\033[1;34m"
+          echo "     █████╗ ██████╗  ██████╗██╗  ██╗    ██╗     ██╗███╗   ██╗██╗   ██╗██╗  ██╗"
+          echo "    ██╔══██╗██╔══██╗██╔════╝██║  ██║    ██║     ██║████╗  ██║██║   ██║╚██╗██╔╝"
+          echo "    ███████║██████╔╝██║     ███████║    ██║     ██║██╔██╗ ██║██║   ██║ ╚███╔╝ "
+          echo "    ██╔══██║██╔══██╗██║     ██╔══██║    ██║     ██║██║╚██╗██║██║   ██║ ██╔██╗ "
+          echo "    ██║  ██║██║  ██║╚██████╗██║  ██║    ███████╗██║██║ ╚████║╚██████╔╝██╔╝ ██╗"
+          echo "    ╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝    ╚══════╝╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚═╝  ╚═╝"
+          echo -e "\033[1;36m"
+          echo "                              ██╗  ██╗██████╗ ███████╗"
+          echo "                              ██║ ██╔╝██╔══██╗██╔════╝"
+          echo "                              █████╔╝ ██║  ██║█████╗  "
+          echo "                              ██╔═██╗ ██║  ██║██╔══╝  "
+          echo "                              ██║  ██╗██████╔╝███████╗"
+          echo "                              ╚═╝  ╚═╝╚═════╝ ╚══════╝"
+          echo -e "\033[0m"
+          echo ""
+          echo -e "\033[1;32m               🐧 Arch Linux KDE Live CD - Cargando sistema...\033[0m"
+          echo ""
+          echo -e "\033[1;33m               Por favor, espera mientras se cargan los componentes del sistema\033[0m"
+          echo ""
+
+          # Animación de carga
+          for i in {1..100}; do
+            printf "\r\033[1;34m[%-50s] %d%%\033[0m" "$(printf "%*s" $((i/2)) "" | tr " " "█")" "$i"
+            sleep 0.05
+            if [ $i -eq 20 ]; then
+              echo -e "\n\033[0;36m   » Cargando kernel y módulos...\033[0m"
+            elif [ $i -eq 40 ]; then
+              echo -e "\n\033[0;36m   » Detectando hardware...\033[0m"
+            elif [ $i -eq 60 ]; then
+              echo -e "\n\033[0;36m   » Configurando red...\033[0m"
+            elif [ $i -eq 80 ]; then
+              echo -e "\n\033[0;36m   » Iniciando entorno gráfico...\033[0m"
+            fi
+          done
+
+          echo -e "\n\n\033[1;32m   ✓ Sistema cargado completamente\033[0m"
+          echo -e "\033[1;37m   Usuario: liveuser (sin contraseña)\033[0m"
+          echo -e "\033[1;37m   Para instalar: Ejecuta el instalador desde el escritorio\033[0m"
+          echo ""
+          sleep 2
+          LOADINGEOF
+
+          chmod +x airootfs/usr/local/bin/livecd-loading
+
+          # Crear servicio para mostrar loading al inicio
+          cat > airootfs/etc/systemd/system/livecd-loading.service << "SERVICEEOF"
+          [Unit]
+          Description=LiveCD Loading Screen
+          After=getty.target
+          Before=sddm.service
+
+          [Service]
+          Type=oneshot
+          ExecStart=/usr/local/bin/livecd-loading
+          StandardOutput=tty
+          TTYPath=/dev/tty1
+          RemainAfterExit=yes
+
+          [Install]
+          WantedBy=multi-user.target
+          SERVICEEOF
+          '
+
       - name: Configure system customization
         run: |
           docker exec arch-builder bash -c '
@@ -546,6 +626,7 @@ jobs:
           # Servicios
           systemctl enable NetworkManager.service
           systemctl enable sddm.service
+          systemctl enable livecd-loading.service
 
           # SDDM autologin
           cat > /etc/sddm.conf.d/autologin.conf << EOF
@@ -559,61 +640,110 @@ jobs:
           # Hostname
           echo "archiso-kde" > /etc/hostname
 
-          # Bashrc
+          # Bashrc con información de bienvenida
           cat >> /home/liveuser/.bashrc << EOF
           alias ll="ls -la"
-          echo "=== Arch Linux KDE Live ==="
-          echo "Usuario: liveuser (sin contraseña)"
+          clear
+          echo -e "\033[1;34m=== 🐧 Arch Linux KDE Live CD ===\033[0m"
+          echo -e "\033[1;32mBienvenido al sistema Live de Arch Linux con KDE\033[0m"
+          echo -e "\033[0;36mUsuario actual: liveuser (sin contraseña)\033[0m"
+          echo -e "\033[0;36mPara instalar: Ejecuta el instalador desde el escritorio\033[0m"
+          echo ""
           EOF
 
           chown -R liveuser:liveuser /home/liveuser
+
+          # Configurar Plymouth para splash screen
+          if command -v plymouth-set-default-theme &> /dev/null; then
+            plymouth-set-default-theme bgrt
+          fi
+
+          # Limpiar cache de pacman
           pacman -Scc --noconfirm
           CUSTOMEOF
 
           chmod +x airootfs/root/customize_airootfs.sh
           '
 
-      - name: Configure boot
+      - name: Configure boot with loading screen
         run: |
           docker exec arch-builder bash -c '
           cd /build/archiso-kde
 
-          # GRUB
+          # GRUB con splash screen y parámetros de loading
           mkdir -p grub
           cat > grub/grub.cfg << "GRUBEOF"
           set default="0"
           set timeout=5
 
           menuentry "Arch Linux KDE Live" {
-              linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% quiet
+              linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% loglevel=3 udev.log_priority=3 vga=current console=tty1 plymouth.enable=1 splash
+              initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+          }
+
+          menuentry "Arch Linux KDE Live (modo verbose)" {
+              linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.show_status=1
+              initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+          }
+
+          menuentry "Arch Linux KDE Live (modo texto)" {
+              linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.unit=multi-user.target
               initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
           }
           GRUBEOF
 
-          # Syslinux
+          # Syslinux con parámetros de loading mejorados
           cat > syslinux/archiso_sys-linux.cfg << "SYSEOF"
           LABEL arch64
           MENU LABEL Arch Linux KDE Live
           LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
           INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-          APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% quiet
+          APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% loglevel=3 udev.log_priority=3 vga=current console=tty1 plymouth.enable=1 splash
+
+          LABEL arch64_verbose
+          MENU LABEL Arch Linux KDE Live (modo verbose)
+          LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+          INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+          APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.show_status=1
+
+          LABEL arch64_text
+          MENU LABEL Arch Linux KDE Live (modo texto)
+          LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+          INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+          APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.unit=multi-user.target
           SYSEOF
 
-          # SystemD-boot
+          # SystemD-boot con opciones de carga mejoradas
           mkdir -p efiboot/loader/entries
           cat > efiboot/loader/loader.conf << "LOADEREOF"
           default archiso-x86_64-linux.conf
-          timeout 3
+          timeout 5
+          console-mode max
+          editor no
           LOADEREOF
 
           cat > efiboot/loader/entries/archiso-x86_64-linux.conf << "ENTRYEOF"
           title Arch Linux KDE Live
           linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
           initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-          options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% quiet
+          options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% loglevel=3 udev.log_priority=3 vga=current console=tty1 plymouth.enable=1 splash
           ENTRYEOF
 
-          # Profile
+          cat > efiboot/loader/entries/archiso-x86_64-linux-verbose.conf << "VERBOSEEOF"
+          title Arch Linux KDE Live (modo verbose)
+          linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+          initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+          options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.show_status=1
+          VERBOSEEOF
+
+          cat > efiboot/loader/entries/archiso-x86_64-linux-text.conf << "TEXTEOF"
+          title Arch Linux KDE Live (modo texto)
+          linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+          initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+          options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.unit=multi-user.target
+          TEXTEOF
+
+          # Profile actualizado con información del splash
           cat > profiledef.sh << "PROFILEEOF"
           #!/usr/bin/env bash
           iso_name="archlinux-kde"
@@ -632,8 +762,74 @@ jobs:
             ["/root"]="0:0:750"
             ["/root/customize_airootfs.sh"]="0:0:755"
             ["/usr/local/bin/arch-installer"]="0:0:755"
+            ["/usr/local/bin/livecd-loading"]="0:0:755"
           )
           PROFILEEOF
+          '
+
+      - name: Configure mkinitcpio for Plymouth
+        run: |
+          docker exec arch-builder bash -c '
+          cd /build/archiso-kde
+          mkdir -p airootfs/etc
+
+          # Configurar mkinitcpio para incluir Plymouth
+          cat > airootfs/etc/mkinitcpio.conf << "MKINITEOF"
+          MODULES=()
+          BINARIES=()
+          FILES=()
+          HOOKS=(base udev plymouth archiso_shutdown archiso archiso_loop_mnt archiso_pxe_common archiso_pxe_nbd archiso_pxe_http archiso_pxe_nfs archiso_kms modconf block plymouth-encrypt filesystems keyboard)
+          COMPRESSION="xz"
+          COMPRESSION_OPTIONS=()
+          MODULES_DECOMPRESS="yes"
+          MKINITEOF
+
+          # Configurar Plymouth
+          mkdir -p airootfs/etc/plymouth
+          cat > airootfs/etc/plymouth/plymouthd.conf << "PLYMOUTHEOF"
+          [Daemon]
+          Theme=bgrt
+          ShowDelay=0
+          DeviceTimeout=5
+          PLYMOUTHEOF
+          '
+
+      - name: Add boot message customization
+        run: |
+          docker exec arch-builder bash -c '
+          cd /build/archiso-kde
+          mkdir -p airootfs/etc/systemd/system/getty@tty1.service.d
+
+          # Personalizar getty para mostrar mensaje de bienvenida
+          cat > airootfs/etc/systemd/system/getty@tty1.service.d/override.conf << "GETTYEOF"
+          [Service]
+          ExecStart=
+          ExecStart=-/usr/bin/agetty -o "-p -f -- \\u" --noclear --autologin liveuser %I $TERM
+          GETTYEOF
+
+          # Crear mensaje de issue para mostrar en consola
+          cat > airootfs/etc/issue << "ISSUEEOF"
+
+          \e[1;34m     █████╗ ██████╗  ██████╗██╗  ██╗    ██╗     ██╗███╗   ██╗██╗   ██╗██╗  ██╗\e[0m
+          \e[1;34m    ██╔══██╗██╔══██╗██╔════╝██║  ██║    ██║     ██║████╗  ██║██║   ██║╚██╗██╔╝\e[0m
+          \e[1;34m    ███████║██████╔╝██║     ███████║    ██║     ██║██╔██╗ ██║██║   ██║ ╚███╔╝ \e[0m
+          \e[1;34m    ██╔══██║██╔══██╗██║     ██╔══██║    ██║     ██║██║╚██╗██║██║   ██║ ██╔██╗ \e[0m
+          \e[1;34m    ██║  ██║██║  ██║╚██████╗██║  ██║    ███████╗██║██║ ╚████║╚██████╔╝██╔╝ ██╗\e[0m
+          \e[1;34m    ╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝    ╚══════╝╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚═╝  ╚═╝\e[0m
+          \e[1;36m                              ██╗  ██╗██████╗ ███████╗\e[0m
+          \e[1;36m                              ██║ ██╔╝██╔══██╗██╔════╝\e[0m
+          \e[1;36m                              █████╔╝ ██║  ██║█████╗  \e[0m
+          \e[1;36m                              ██╔═██╗ ██║  ██║██╔══╝  \e[0m
+          \e[1;36m                              ██║  ██╗██████╔╝███████╗\e[0m
+          \e[1;36m                              ╚═╝  ╚═╝╚═════╝ ╚══════╝\e[0m
+
+          \e[1;32m               🐧 Arch Linux KDE Live CD\e[0m
+          \e[0;36m               Sistema cargado y listo para usar\e[0m
+
+          \e[1;37m    Usuario: liveuser (sin contraseña)\e[0m
+          \e[1;37m    Para instalar: Ejecuta el instalador desde el escritorio\e[0m
+
+          ISSUEEOF
           '
 
       - name: Build ISO
@@ -642,7 +838,7 @@ jobs:
           cd /build/archiso-kde
           echo "=== Archivos del proyecto ==="
           ls -la
-          echo "=== Construyendo ISO ==="
+          echo "=== Construyendo ISO con pantalla de carga ==="
           mkarchiso -v -w work -o out .
           ls -la out/
           '
